cmake_minimum_required(VERSION 3.24)
project(volantis LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
# dependencies
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/glad)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/glfw)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/glm)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/spdlog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/cxxopts)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/tinyobjloader)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/tinygltf)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/googletest)
# libraries
file(GLOB_RECURSE SOURCES "src/*.cpp")
add_library(${PROJECT_NAME}-common ${SOURCES})
target_include_directories(${PROJECT_NAME}-common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME}-common PUBLIC glad glfw glm spdlog cxxopts tinyobjloader tinygltf)
# applications
file(GLOB_RECURSE APPLICATIONS "app/*.cpp")
foreach(APPLICATION ${APPLICATIONS})
    get_filename_component(APPLICATION_NAME ${APPLICATION} NAME_WE)
    add_executable(${APPLICATION_NAME} ${APPLICATION})
    target_include_directories(${APPLICATION_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
    target_link_libraries(${APPLICATION_NAME} PUBLIC ${PROJECT_NAME}-common)
endforeach()
# tests
file(GLOB_RECURSE TESTCASES "test/*.cpp")
foreach(TESTCASE ${TESTCASES})
    get_filename_component(TESTCASE_NAME ${TESTCASE} NAME_WE)
    add_executable(${TESTCASE_NAME} ${TESTCASE})
    target_include_directories(${TESTCASE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
    target_link_libraries(${TESTCASE_NAME} PUBLIC ${PROJECT_NAME}-common gtest gtest_main)
endforeach()
